fix conditional spacing

--- a/ourtake.css
+++ b/ourtake.css
@@ -85,7 +85,7 @@ h4 {
     padding: 25px;
     margin: 5px;
     width: 60%;
-    height: 200px;
+    height: 400px;
 }
 
 .front {
@@ -138,7 +138,7 @@ h4 {
 .voteButton {
     background-color: #fff4db;
     font-family: Georgia, serif;
-    font-size: 24px;
+    font-size: 18px;
 }
 
 .voteText {
@@ -164,7 +164,7 @@ h4 {
     padding: 25px;
     margin: 5px;
     width: 25%;
-    height: 200px;
+    height: 400px;
 
 }
 
